--- a/.gitignore
+++ b/.gitignore
@@ -548,4 +548,6 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,windows,aspnetcore
+bin/
+obj/
 appsettings.Development.json
